--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,5 @@
 @import "partials/grid";
+@import "partials/keyframes";
+@import "partials/nav";
 @import "partials/main";
+@import "partials/button";
